--- a/index.html
+++ b/index.html
@@ -41,13 +41,11 @@
   <h2>
   <p id="label">Your Sketch : </p>
   <p id="confidence">Confidence : </p>
-  <p id="mySketch">Sketch to be drawn: </p>
+  <button class="btn btn-danger btn-lg" onclick="clearCanvas()">Clear Canvas</button>
   </h2>
   <br>
   <br>
-  <span id="score">Score :</span>
   
-  <span id="timer"> Timer :</span>
 </center>
 
 <script src="main.js"></script>
